# gtk-fun

./: CMakeLists.txt  debug_gui.glade  main.c  serial_debug_gui.py
